[package]
name = "svscr"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
description = "A simple tool that allows you to quickly save a picture from the clipboard to a file"
repository = "https://github.com/ArmoredPony/svscr"

[dependencies]
anyhow = "1.0.86"
arboard = "3.4.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "string"] }
home = "0.5.9"
image = "0.25.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
